Upgrade to 11ty 2.x; fiddling around with things

--- a/_includes/assets/sass/styles.scss
+++ b/_includes/assets/sass/styles.scss
@@ -14,39 +14,49 @@
 */
 
 /*--------------------------------------------------------------
+# OpenProps
+--------------------------------------------------------------*/
+@import "./openprops";
+
+/*--------------------------------------------------------------
 # Variables
 --------------------------------------------------------------*/
-@import "variables";
+@import "./partials/variables";
+
+/* --------------------------------------------------------------
+# Tools
+-------------------------------------------------------------- */
+@import "./tools/tools";
 
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-@import "normalize";
+// @import "./normalize";
 
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
-@import "elements";
+// @import "./elements";
 
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
-@import "components";
+@import "./partials/components";
 
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-@import "typography";
+@import "./partials/typography";
 
 /*--------------------------------------------------------------
 # Layout
 --------------------------------------------------------------*/
-@import "layout";
+@import "./partials/layout";
 
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
-@import "accessibility";
+// @import "accessibility";
 
 /*--------------------------------------------------------------
 # Forms
@@ -56,9 +66,9 @@
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
-@import "media";
+// @import "media";
 
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
-@import "navigation";
+// @import "navigation";
