--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -9,7 +9,12 @@
   {% if metadesc %}
   <meta name="description" content="{{ metadesc }}" />
   {% endif %}
-  <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,400i,700|Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
+
+  {# Google Fonts #}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+  
   {% set css %}
     {% include "assets/css/build/styles.css" %}
   {% endset %}
