--- a/_includes/assets/sass/partials/_variables.scss
+++ b/_includes/assets/sass/partials/_variables.scss
@@ -2,25 +2,47 @@
 VARIABLES
 ========================================================================== */
 
-@import "node_modules/sass-rem/rem";
+$base-font-size: 18px;
 
-$base-font-size: 19px;
+// Colors
+$black: #000;
+$white: #ffffff;
+$yellow: #FFDB03;
+$pale-yellow: rgba(252, 247, 215, 0.63);
+$red: #CE132D;
+$orange: #EE701C;
+$grey-light: #f2f3f4;
+$grey-background: #E5E5E5;
+$grey-support: #B3BABF;
+$grey-footer: #F3F6F9;
+$grey-border: #d9dcdf;
+$gradient: linear-gradient(90deg, #CE132D 0%, rgba(206, 19, 45, 0) 100%), linear-gradient(270deg, #EE701C 0%, rgba(238, 112, 28, 0) 100%), #CE132D;
+
+$body: #323E48;
+
 
 // Custom media queries
-$xs-mobile-down: 340px;
-$sm-mobile: 375px;
-$md-mobile: 480px;
-$mobile: 576px;
-$tablet: 768px;
-$desktop: 992px;
-$lg-desktop: 1200px;
-$carousel-desktop: 1300px;
-$xl-desktop: 1440px;
+$break-very-small: 26rem; // >= 416px @ 16px
+$break-small: 36rem; // >= 576px @ 16px
+$break-medium: 48rem; // >= 768px @ 16px
+$break-large: 64rem; // >= 1024px @ 16px
+$break-extra-large: 80rem; // >= 1280px @ 16px
+$break-largest: 90rem; // >= 1440px @ 16px
+
+// $xs-mobile-down: 340px;
+// $sm-mobile: 375px;
+// $md-mobile: 480px;
+// $mobile: 576px;
+// $tablet: 768px;
+// $desktop: 992px;
+// $lg-desktop: 1200px;
+// $carousel-desktop: 1300px;
+// $xl-desktop: 1440px;
 
 // Fonts
-$primary-font: 'Nunito', sans-serif;
-$secondary-font: 'Source Sans Pro', sans-serif;
-$headings-font: 'Nunito', sans-serif;
+$primary-font: 'PT Sans', var(--font-sans);
+$secondary-font: 'PT Sans', var(--font-sans);
+$headings-font: 'PT Serif', var(--font-serif);
 
 // Font weight
 $base-font-weight-bold: 700;
