--- a/_includes/components/site-header.njk
+++ b/_includes/components/site-header.njk
@@ -1,8 +1,8 @@
     <header role="banner" class="header-main" id="main-navigation">
 			<div class="container container--wide container--flex">
 				<div class="header-main__logo">
-					<a href="{{ '/' | url }}">
-						<img src="/static/img/ui/nlc-full-logoX600.png" alt="{{ metadata.title }}" />
+					<a href="{{ '/' | url }}" class="site-logo">
+						<h1>{{ metadata.title }}</h1>
 					</a>
 				</div>
 				<div class="header-main__nav">
