--- a/_includes/assets/sass/styles.scss
+++ b/_includes/assets/sass/styles.scss
@@ -21,7 +21,7 @@
 /*--------------------------------------------------------------
 # Variables
 --------------------------------------------------------------*/
-@import "./partials/variables";
+@import "./common/variables";
 
 /* --------------------------------------------------------------
 # Tools
@@ -36,7 +36,7 @@
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
-// @import "./elements";
+@import "./partials/elements";
 
 /*--------------------------------------------------------------
 # Components
@@ -71,4 +71,4 @@
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
-// @import "navigation";
+@import "./partials/navigation";
