--- a/_includes/layouts/components/head.njk
+++ b/_includes/layouts/components/head.njk
@@ -1,11 +1,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {% if permalink == '/' %}
-    <title>{{ title or renderData.title or metadata.title }}</title>
-  {% else %}
-    <title>{{ title or renderData.title or metadata.title }} | J S Baker</title>
-  {% endif %}
+  
+  <title>{{ pageTitle or title or renderData.title or metadata.title }} | {{ metadata.title }}</title>
+
   {% if metadesc %}
   <meta name="description" content="{{ metadesc }}" />
   {% endif %}
@@ -13,7 +11,7 @@
   {# Google Fonts #}
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,500;0,700;1,300;1,500;1,700&family=PT+Serif:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
   
   {% set css %}
     {% include "assets/css/build/styles.css" %}
@@ -35,4 +33,6 @@
     {% include "assets/js/inline.js" %}
   {% endset %}
   <script>{{ js | jsmin | safe }}</script>
+
+  {% include "layouts/components/head-social-cards.njk" %}
 </head>
