--- a/_includes/assets/sass/partials/_typography.scss
+++ b/_includes/assets/sass/partials/_typography.scss
@@ -2,8 +2,230 @@
 TYPOGRAPHY
 ========================================================================== */
 
-:where(p),
+p,
 .body-style {
+  width: 100%;
   font-family: $primary-font;
-  margin-block-end: 1rem;
+  font-size: var(--font-size-fluid-0);
+  font-weight: $base-font-weight-regular;
+  line-height: $body-line-height;
+  font-style: normal;
+  color: inherit;
+  margin-block: 0.75rem;
+}
+
+.secondary-font {
+  font-family: $secondary-font;
+}
+
+.headings-font {
+  font-family: $headings-font;
+}
+
+/* Shared styles */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1-style,
+.h2-style,
+.h3-style,
+.h4-style,
+.h5-style,
+.h6-style {
+  color: inherit;
+  font-family: $headings-font;
+  font-weight: $headings-font-weight;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal;
+  margin: 0;
+  mix-blend-mode: normal;
+}
+
+h1,
+.h1-style {
+  font-size: var(--font-size-fluid-3);
+}
+//   font-size: $h1-font-size-mobile;
+//   line-height: $h1-line-height-mobile;
+//   font-weight: $headings-font-weight;
+//   margin-bottom: px-to-rem(1.5 * $base-space);
+
+//   @media only screen and (min-width: $tablet) {
+//     font-size: $h1-font-size;
+//     line-height: $h1-line-height;
+//   }
+// }
+
+h2,
+.h2-style {
+  font-size: var(--font-size-fluid-2);
+}
+//   font-size: $h2-font-size-mobile;
+//   line-height: $h2-line-height-mobile;
+//   font-weight: $headings-font-weight;
+//   margin-bottom: px-to-rem(20px);
+
+//   @include respond-to('medium') {
+//     font-size: $h2-font-size;
+//     line-height: $h2-line-height;
+//     margin-bottom: px-to-rem(23px);
+//   }
+// }
+
+h3,
+.h3-style {
+  font-size: var(--font-size-fluid-1);
+}
+//   font-size: $h3-font-size-mobile;
+//   line-height: $h3-line-height-mobile;
+//   font-weight: $headings-font-weight;
+//   margin-bottom: px-to-rem(12px);
+
+//   @include respond-to('medium') {
+//     font-size: $h3-font-size;
+//     line-height: $h3-line-height;
+//     margin-bottom: px-to-rem(16px);
+//   }
+// }
+
+// // Subheading, slightly different styling.
+h4,
+.h4-style {
+  font-size: var(--font-size-fluid-0);
+}
+//   font-size: $h4-font-size-mobile;
+//   line-height: $h4-line-height-mobile;
+
+//   @include respond-to('medium') {
+//     font-size: $h4-font-size;
+//     line-height: $h4-line-height;
+//   }
+// }
+
+// Helpers - Additions to help with reuseable code approach. Add classes to achieve styles rather than nesting.
+.bold {
+  font-weight: $base-font-weight-bold;
+}
+
+.centered {
+  text-align: center;
+}
+
+.hide-text {
+  @include hide-text;
+}
+
+.visually-hidden {
+  @include visually-hidden;
+}
+
+.do-not-display {
+  @include do-not-display;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.header-highlight {
+  border-left: 2px solid ;
+  padding-left: px-to-rem(20px);
+  margin: px-to-rem(34px) 0;
+
+  blockquote {
+    margin: 0;
+  }
+}
+
+.section-header {
+  &.section-header--narrow {
+    width: 100%;
+
+    @media only screen and (min-width: $mobile) {
+      max-width: px-to-rem(400px);
+    }
+
+    @media only screen and (min-width: $desktop) {
+      max-width: px-to-rem(534px);
+
+      @supports (-ms-ime-align:auto) {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.section-header__text {
+  font-size: px-to-rem(31px);
+  line-height: px-to-rem(57px);
+  font-family: $primary-font;
+  margin: 0;
+  position: relative;
+  text-align: left;
+  overflow: hidden;
+  padding-top: px-to-rem(23px);
+  padding-bottom: px-to-rem(23px);
+
+  @media only screen and (min-width: $desktop) {
+    font-size: px-to-rem(48px);
+    line-height: px-to-rem(73px);
+  }
+
+  span {
+    padding: px-to-rem(23px) px-to-rem(20px);
+    padding-top: px-to-rem(23px);
+    padding-bottom: px-to-rem(23px);
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+
+    @media only screen and (min-width: $desktop) {
+      padding: px-to-rem(23px) px-to-rem(44px);
+    }
+  }
+}
+
+
+
+.caption {
+  font-family: $primary-font;
+  font-style: normal;
+  font-weight: normal;
+  font-size: px-to-rem(12px);
+  line-height: px-to-rem(16px);
+  text-align: center;
+}
+
+.supporting-text {
+  font-size: px-to-rem(12px);
+  line-height: px-to-rem(16px);
+  margin-top: px-to-rem(10.45px);
+
+  @media only screen and (min-width: $tablet) {
+    font-size: px-to-rem(14px);
+    line-height: px-to-rem(20px);
+  }
+}
+
+.inline-text {
+  display: inline;
+}
+
+.large-body-text {
+  font-size: $lg-body-font-size-mobile;
+  line-height: $lg-body-line-height-mobile;
+  font-weight: $base-font-weight-regular;
+
+  @media only screen and (min-width: $tablet) {
+    font-size: $lg-body-font-size;
+    line-height: $lg-body-line-height;
+  }
+}
+
+// Colours
+.white-text {
+  color: var(--surface-1);
 }
