--- a/_includes/layouts/components/site-header.njk
+++ b/_includes/layouts/components/site-header.njk
@@ -1,17 +1,17 @@
     <header role="banner" class="header-main" id="main-navigation">
-			<div class="container container--wide container--flex">
+			<div class="header-main__inner container container--wide container--flex">
 				<div class="header-main__logo">
 					<a href="{{ '/' | url }}" class="site-logo">
 						<h1>{{ metadata.title }}</h1>
 					</a>
 				</div>
 				<div class="header-main__nav">
-					{% include "components/nav.njk" %}
+					{% include "layouts/components/nav.njk" %}
 				</div>
 				<button class="header-main__menu js-closed" aria-expanded="false" href="#main-navigation">
 					<a class="css-nav css-nav--open" href="#main-navigation" aria-label="Open menu">Open</a>
 					<a class="css-nav css-nav--close" href="#" aria-label="Close menu">Close</a>
-					<div class="header-main__menu__text closed-text" aria-label="Open menu">Menu</div>
+					<div class="header-main__menu__text closed-text hide-text" aria-label="Open menu">Menu</div>
 					<div class="header-main__menu__text open-text" aria-label="Close menu">Close</div>
 					<div class="header-main__menu__burger">
 						<div></div>
