--- a/_includes/assets/sass/partials/_components.scss
+++ b/_includes/assets/sass/partials/_components.scss
@@ -8,6 +8,7 @@ COMPONENTS
 @import "../components/content_canvas";
 @import "../components/faux-block-link";
 @import "../components/page";
+@import "../components/picture";
 
 // Index pages
 @import "../components/index-list";
