--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -2,5 +2,8 @@
 layout: layouts/base.njk
 section: page
 ---
+	{% if image.path %}
+			{% image image.path, image.alt, image.class, image.pictureClass %}
+	{% endif %}
 
 	{{ layoutContent | safe }}
