--- a/_includes/assets/sass/common/_variables.scss
+++ b/_includes/assets/sass/common/_variables.scss
@@ -72,14 +72,17 @@ $body-font-size: px-to-rem($base-font-size);
 $lg-body-font-size-mobile: px-to-rem(19px);
 $lg-body-font-size: px-to-rem(25px);
 
+$h1-lg-font-size-mobile: px-to-rem(48px);
+$h1-lg-font-size: px-to-rem(64px);
+
 $h1-font-size-mobile: px-to-rem(28px);
 $h1-font-size: px-to-rem(36px);
 
 $h2-font-size-mobile: px-to-rem(19px);
 $h2-font-size: px-to-rem(23px);
 
-$h3-font-size-mobile: px-to-rem(17px);
-$h3-font-size: px-to-rem(19px);
+$h3-font-size-mobile: px-to-rem(18px);
+$h3-font-size: px-to-rem(20px);
 
 $h4-font-size-mobile: px-to-rem(17px);
 $h4-font-size: px-to-rem(19px);
