--- a/_includes/layouts/components/title-bar.njk
+++ b/_includes/layouts/components/title-bar.njk
@@ -5,7 +5,7 @@
 		<div class="title-bar">
 	{% endif %}
 			<div class="container">
-				<h1>{{ title }}</h1>
+				<h1 class="page-title__heading">{{ title }}</h1>
 			</div>
 		</div>
 	</div>
