--- a/_includes/assets/sass/partials/_components.scss
+++ b/_includes/assets/sass/partials/_components.scss
@@ -5,6 +5,7 @@ COMPONENTS
 @import "../components/site-header";
 @import "../components/site-header-nav";
 @import "../components/site-content";
+@import "../components/site-footer";
 @import "../components/content_canvas";
 @import "../components/faux-block-link";
 @import "../components/page";
