--- a/_includes/assets/sass/partials/_elements.scss
+++ b/_includes/assets/sass/partials/_elements.scss
@@ -29,8 +29,10 @@ ELEMENTS
     --surface-violet: #{$surface-violet};
     --surface-rose: #{$surface-rose};
 
+    --font-size-fluid-00: clamp(#{$body-sml-font-size-mobile}, 1.5vw, #{$body-sml-font-size});
     --font-size-fluid-0: clamp(#{$body-font-size-mobile}, 1.5vw, #{$body-font-size});
     --font-size-fluid-01: clamp(#{$h3-font-size-mobile}, 1.75vw, #{$h3-font-size});
+    --font-size-fluid-21: clamp(#{$h2-font-size-mobile}, 2.5vw, #{$h2-font-size});
     --font-size-fluid-3: clamp(#{$h1-font-size-mobile}, 4vw, #{$h1-font-size});
     --font-size-fluid-4: clamp(#{$h1-lg-font-size-mobile}, 6vw, #{$h1-lg-font-size});
     
