--- a/_includes/assets/sass/partials/_components.scss
+++ b/_includes/assets/sass/partials/_components.scss
@@ -14,3 +14,6 @@ COMPONENTS
 // Index pages
 @import "../components/index-list";
 @import "../components/pagination";
+
+// Other
+@import "../components/glyphicon";
