--- a/_includes/assets/sass/partials/_navigation.scss
+++ b/_includes/assets/sass/partials/_navigation.scss
@@ -10,7 +10,9 @@
   background-color: var(--surface-2);
 }
 
-.main-nav {
+.main-nav,
+.footer-main__nav,
+.footer__nav {
   font-size: var(--font-size-fluid-0);
 
   ul {
