--- a/_includes/layouts/components/site-footer.njk
+++ b/_includes/layouts/components/site-footer.njk
@@ -1,6 +1,6 @@
 <footer class="footer-main">
-	<div class="container container--wide">
-		<nav aria-label="Find out more" class="footer-main__nav">
+	<div class="footer-main__container container">
+		<nav aria-label="Find out more" class="footer-main__nav footer-main__left">
 			{# <ul>
 				{%- for footer in collections.footerNav -%}
 				<li>
@@ -19,5 +19,16 @@
 			{%- endfor %}
 			</ul>
 		</nav>
+		<div class="footer-main__container__contact-me footer__nav footer-main__right">
+			<h3 class="h4-style">Contact me</h3>
+			<dl class="footer-main__container__contact-me__list">
+				<dt>Mastodon</dt>
+				<dd><a href="https://mstdn.social/@joesb" rel="me noreferrer" target="_blank" class="social-site mastodon">mstdn.social/@joesb</a></dd>
+				<dt>Twitter</dt>
+				<dd><a href="https://twitter.com/joesb" rel="noreferrer" target="_blank" class="social-site twitter">@joesb</a></dd>
+				<dt>Instagram</dt>
+				<dd><a href="https://www.instagram.com/joesb/" rel="noreferrer" target="_blank" class="social-site instagram">@joesb</dd>
+			</dl>
+		</div>
 	</div>
 </footer>
