--- a/_includes/assets/sass/components/_site-header.scss
+++ b/_includes/assets/sass/components/_site-header.scss
@@ -30,6 +30,14 @@
     grid-area: logo;
     display: flex;
     justify-content: center;
+
+    a {
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
 
   .header-main__nav {
