--- a/_includes/assets/sass/partials/_components.scss
+++ b/_includes/assets/sass/partials/_components.scss
@@ -10,6 +10,7 @@ COMPONENTS
 @import "../components/faux-block-link";
 @import "../components/page";
 @import "../components/picture";
+@import "../components/link-internal";
 
 // Index pages
 @import "../components/index-list";
